# canvas-creator

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: api.py  jobs.py  layout.py  main.py  models.py
backend/db/: jobs.db
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  CropDialog.tsx  Select.tsx  api.ts  index.css
frontend/src/pages/: Creator.tsx  Gallery.tsx
